# GoIT_Web_homework_13-2

./: .gitignore  Dockerfile  Dockerfile.generated_fly  README.md  fly.toml  pyproject.toml  requirements.txt  run.sh
hw10project/: .env.ex
hw10project/hw10project/: settings.py
hw10project/quotes/templates/quotes/: base.html
hw10project/users/: urls.py  views.py
hw10project/users/templates/users/: password_reset.html  password_reset_done.html  password_reset_email.html  signin.html
